5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4410/executions/1721_3068.log
== TEST (2019-05-02 18:14:26) 
-- CODE:
cimitarra = 2+2-20 + 2-20
katana = 2+2-20 + 2-20
sabre = 2+2-20 + 2+2-20
print = input(cimitarra, katana, sabre)
print = (cimitarra, katan, sabre)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print = input(cimitarra, katana, sabre)
TypeError: input expected at most 1 arguments, got 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:14:56) 
-- CODE:
cimitarra = 2+2-20 + 2-20
katana = 2+2-20 + 2-20
sabre = 2+2-20 + 2+2-20
print = input()
print = (cimitarra, katan, sabre)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = (cimitarra, katan, sabre)
NameError: name 'katan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:15:39) 
-- CODE:
cimitarra = 2+2-20 + 2-20
katana = 2+2-20 + 2-20
sabre = 2+2-20 + 2+2-20
print = input()
print = (cimitarra,katan,sabre)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = (cimitarra,katan,sabre)
NameError: name 'katan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:46:06) 
-- CODE:
cimitarra = 2+2-20 + 2-20
katana = 2+2-20 + 2-20
sabre = 2+2-20 + 2+2-20
print = input()
print = (cimitarra,katan,sabre)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = (cimitarra,katan,sabre)
NameError: name 'katan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
